--- a/Home.css
+++ b/Home.css
@@ -184,7 +184,7 @@
     order: 0;
   }
 } .u-section-2 {
-  background-image: url("4.png?rand=ecdb");
+  background-image: url("4.jpg?rand=ecdb");
   background-position: 50% 50%;
 }
 
@@ -434,7 +434,7 @@
     padding-left: 47px;
   }
 } .u-section-4 {
-  background-image: url("1.png");
+  background-image: url("1.jpg");
   background-position: 50% 50%;
   min-height: 1100px;
 }
@@ -634,7 +634,7 @@
     padding: 4px 43px 6px;
   }
 } .u-section-6 {
-  background-image: url("2.png");
+  background-image: url("2.jpg");
   background-position: 50% 50%;
   min-height: 1100px;
 }
@@ -826,7 +826,7 @@
     padding-top: 15px;
   }
 } .u-section-8 {
-  background-image: url("3.png");
+  background-image: url("3.jpg");
   background-position: 50% 50%;
   min-height: 1200px;
 }
@@ -1046,7 +1046,7 @@
     padding-left: 41px;
   }
 } .u-section-10 {
-  background-image: url("5.png");
+  background-image: url("5.jpg");
   background-position: 50% 50%;
   min-height: 1100px;
 }
